--- a/ReWrite/Rewrite_DivineEngine.conf
+++ b/ReWrite/Rewrite_DivineEngine.conf
@@ -1,73 +1,74 @@
 hostname = -lark-frontier-hl.snssdk.com,api.weibo.cn,mapi.weibo.com,www.zhihu.com,api.21jingji.com,service.4gtv.tv,app.58.com,pic?.ajkimg.com,gw.alicdn.com,heic.alicdn.com,acs.m.taobao.com,m*.amap.com,api-new.app.acfun.cn,api.bjxkhc.com,*.amemv.com,*.snssdk.com,issuecdn.baidupcs.com,pan.baidu.com,newclient.map.baidu.com,mime.baidu.com,act.vip.iqiyi.com,app.bilibili.com,manga.bilibili.com,channel.beitaichufang.com,iapi.bishijie.com,app.api.ke.com,www.bodivis.com.cn,yxyapi*.drcuiyutao.com,clientaccess.10086.cn,m.client.10010.com,cloud.189.cn,api.chelaile.net.cn,web.chelaile.net.cn,cap.caocaokeji.cn,api.caijingmobile.com,gw.csdn.net,m.ctrip.com,app.poizon.com,api.douban.com,rtbapi.douyucdn.cn,e.dangdang.com,daoyu.sdo.com,*.daydaycook.com,maicai.api.ddxq.mobi,mobile-api2011.elong.com,123.59.31.1,119.18.193.135,cube.elemecdn.com,i.ys7.com,www.flyertea.com,dsa-mfp.fengshows.cn,api.feng.com,*-release.wuta-cam.com,www.youtube.com,s.youtube.com,gateway.shouqiev.com,dl.app.gtja.com,prom.mobile.gome.com.cn,smkmp.96225.com,api.huomao.com,imeclient.openspeech.cn,api.intsig.net,ih2.ireader.com,nnapp.cloudbae.cn,ib-soft.net,www.inoreader.com,api.m.jd.com,ms.jr.jd.com,img*.360buyimg.com,api.jxedt.com,richmanapi.jxedt.com,*.kakamobi.cn,app-api.jinse.com,ios.wps.cn,*.kingsoft-office-service.com,api.gotokeep.com,api.kkmh.com,122.14.246.33,175.102.178.52,api.club.lenovo.cn,api.jr.mi.com,api-mifit*.huami.com,api.mgzf.com,cdn.moji.com,img.meituan.net,p*.meituan.net,s3plus.meituan.net,flowplus.meituan.net,capi.mwee.cn,mapi.mafengwo.cn,app.mixcapp.com,appconf.mail.163.com,c.m.163.com,client.mail.163.com,interface*.music.163.com,59.111.181.*,sp.kaola.com,support.you.163.com,p.du.163.com,app-api.niu.com,slapi.oray.net,pss.txffp.com,api.yangkeduo.com,api.pinduoduo.com,mrobot.pconline.com.cn,mrobot.pcauto.com.cn,open.qyer.com,media.qyer.com,api.qbb6.com,mage.if.qidian.com,msspjh.emarbox.com,api.rr.tv,*.uve.weibo.com,weibointl.api.weibo.cn,tqt.weibo.cn,*.k.sohu.com,*.tv.sohu.com,ap*.smzdm.com,gw-passenger.01zhuanche.com,mpcs.suning.com,ccsp-egmas.sf-express.com,consumer.fcbox.com,g.cdn.pengpengla.com,snailsleep.net,api*.futunn.com,ssl.kohsocialapp.qq.com,4gimg.map.qq.com,r.inews.qq.com,news.ssp.qq.com,mp.weixin.qq.com,m.tuniu.com,mob.mddcloud.com,img*.10101111cdn.com,api.vuevideo.net,app.variflight.com,api.cdmcaac.com,api.vistopia.com.cn,app.wy.guahao.com,thor.weidian.com,api.wallstcn.com,api.xiachufang.com,api.psy-1.com,portal-xunyou.qingcdn.com,api.xueqiu.com,promo.xueqiu.com,182.92.251.113,101.201.175.228,www.xiaohongshu.com,app.yinxiang.com,restapi.iyunmai.com,api.zhihu.com,a.qiumibao.com,*.zhuishushenqi.com,www.zybang.com,api.izuiyou.com,tiku.zhan.com,webboot.zhangyue.com,saad.ms.zhangyue.net,homepage-api.smzdm.com,haojia-api.smzdm.com,article-api.smzdm.com,*.wikipedia.org,*.wikiwand.com,*.googlevideo.com,*.tiktokv.com,*.byteoversea.com,*.musical.ly,*.snssdk.com,www.google.cn,api.abema.io
 
 # Redirect Google Search Service
-^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
+^(http|https):\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
 
 # Redirect Google Maps Service
-^https?:\/\/(ditu|maps).google\.cn url 302 https://maps.google.com
+^(http|https):\/\/(ditu|maps).google\.cn url 302 https://maps.google.com
 
 # Redirect HTTP to HTTPS
-^https?:\/\/(www.)?taobao\.com\/ url 302 https://taobao.com/
-^https?:\/\/(www.)?jd\.com\/ url 302 https://www.jd.com/
-^https?:\/\/(www.)?mi\.com\/ url 302 https://www.mi.com/
-^https?:\/\/you\.163\.com\/ url 302 https://you.163.com/
-^https?:\/\/(www.)?suning\.com\/ url 302 https://suning.com/
-^https?:\/\/(www.)?yhd\.com\/ url 302 https://yhd.com/
+^(http|https):\/\/(www.)?taobao\.com\/ url 302 https://taobao.com/
+^(http|https):\/\/(www.)?jd\.com\/ url 302 https://www.jd.com/
+^(http|https):\/\/(www.)?mi\.com\/ url 302 https://www.mi.com/
+^(http|https):\/\/you\.163\.com\/ url 302 https://you.163.com/
+^(http|https):\/\/(www.)?suning\.com\/ url 302 https://suning.com/
+^(http|https):\/\/(www.)?yhd\.com\/ url 302 https://yhd.com/
+
 
 # Weibo Short URL
 ^http:\/\/t\.cn url 302 https://sinaurl.cn
 
 # Redirect False to True
 # > IGN China to IGN Global
-^https?:\/\/(www.)?ign\.xn--fiqs8s\/ url 302 http://cn.ign.com/ccpref/us
+^(http|https):\/\/(www.)?ign\.xn--fiqs8s\/ url 302 http://cn.ign.com/ccpref/us
 # > Fake Website Made By C&J Marketing
-^https?:\/\/(www.)?abbyychina\.com\/ url 302 https://www.abbyy.cn/
-^https?:\/\/(www.)?bartender\.cc\/ url 302 https://www.macbartender.com/
-^https?:\/\/(www.)?(betterzipcn|betterzip)\.(com|net)\/ url 302 https://macitbetter.com/
-^https?:\/\/(www.)?beyondcompare\.cc\/ url 302 https://www.scootersoftware.com/
-^https?:\/\/(www.)?bingdianhuanyuan\.cn\/ url 302 https://www.faronics.com/zh-hans/products/deep-freeze
-^https?:\/\/(www.)?chemdraw\.com\.cn\/ url 302 https://www.perkinelmer.com.cn/
-^https?:\/\/(www.)?codesoftchina\.com\/ url 302 https://www.teklynx.com/
-^https?:\/\/(www.)?coreldrawchina\.com\/ url 302 https://www.coreldraw.com/cn/
-^https?:\/\/(www.)?crossoverchina\.com\/ url 302 https://www.codeweavers.com/
-^https?:\/\/(www.)?dongmansoft\.com\/ url 302 https://www.udongman.cn/
-^https?:\/\/(www.)?earmasterchina\.cn\/ url 302 https://www.earmaster.com/
-^https?:\/\/(www.)?easyrecoverychina\.com\/ url 302 https://www.ontrack.com/
-^https?:\/\/(www.)?ediuschina\.com\/ url 302 https://www.grassvalley.com/
-^https?:\/\/(www.)?flstudiochina\.com\/ url 302 https://www.image-line.com/
-^https?:\/\/(www.)?formysql\.com\/ url 302 https://www.navicat.com.cn/
-^https?:\/\/(www.)?guitarpro\.cc\/ url 302 https://www.guitar-pro.com/
-^https?:\/\/(www.)?huishenghuiying\.com\.cn\/ url 302 https://www.coreldraw.com/cn/
-^https?:\/\/hypersnap\.mairuan\.com\/ url 302 https://www.hyperionics.com/
-^https?:\/\/(www.)?iconworkshop\.cn\/ url 302 https://www.axialis.com/
-^https?:\/\/(www.)?idmchina\.net\/ url 302 https://www.internetdownloadmanager.com/
-^https?:\/\/(www.)?imindmap\.cc\/ url 302 https://www.ayoa.com/previously-imindmap/
-^https?:\/\/(www.)?jihehuaban\.com\.cn\/ url 302 https://www.chartwellyorke.com/sketchpad/x24795.html
-^https?:\/\/hypersnap\.mairuan\.com\/ url 302 https://www.keyshot.com/
-^https?:\/\/(www.)?kingdeecn\.cn\/ url 302 http://www.kingdee.com/
-^https?:\/\/(www.)?logoshejishi\.com url 302 https://www.sothink.com/product/logo-design-software/
-^https?:\/\/logoshejishi\.mairuan\.com\/ url 302 https://www.sothink.com/product/logo-design-software/
-^https?:\/\/(www.)?luping\.net\.cn\/ url 302 https://www.techsmith.com/
-^https?:\/\/(www.)?mathtype\.cn\/ url 302 https://www.dessci.com/
-^https?:\/\/(www.)?mindmanager\.(cc|cn)\/ url 302 https://www.mindjet.com/cn/
-^https?:\/\/(www.)?mindmapper\.cc\/ url 302 https://www.mindmapper.com/
-^https?:\/\/(www.)?(mycleanmymac|xitongqingli)\.com\/ url 302 https://macpaw.com/
-^https?:\/\/(www.)?nicelabel\.cc\/ url 302 https://www.nicelabel.com/zh/
-^https?:\/\/(www.)?ntfsformac\.cc\/ url 302 https://www.tuxera.com/products/tuxera-ntfs-for-mac-cn/
-^https?:\/\/(www.)?ntfsformac\.cn\/ url 302 https://china.paragon-software.com/home-mac/ntfs-for-mac/
-^https?:\/\/(www.)?overturechina\.com\/ url 302 https://sonicscores.com/
-^https?:\/\/(www.)?passwordrecovery\.cn\/ url 302 https://cn.elcomsoft.com/aopr.html
-^https?:\/\/(www.)?pdfexpert\.cc\/ url 302 https://pdfexpert.com/zh
-^https?:\/\/(www.)?photozoomchina\.com\/ url 302 https://www.benvista.com/
-^https?:\/\/(www.)?shankejingling\.com\/ url 302 https://www.sothink.com/product/flashdecompiler/
-^https?:\/\/cn\.ultraiso\.net\/ url 302 https://cn.ezbsystems.com/ultraiso/
-^https?:\/\/(www.)?vegaschina\.cn\/ url 302 https://www.vegascreativesoftware.com/
-^https?:\/\/(www.)?xshellcn\.com\/ url 302 https://www.netsarang.com/zh/xshell/
-^https?:\/\/(www.)?yuanchengxiezuo\.com\/ url 302 https://www.teamviewer.com/
-^https?:\/\/(www.)?zbrushcn.com/ url 302 https://pixologic.com/
+^(http|https):\/\/(www.)?abbyychina\.com\/ url 302 https://www.abbyy.cn/
+^(http|https):\/\/(www.)?bartender\.cc\/ url 302 https://www.macbartender.com/
+^(http|https):\/\/(www.)?(betterzipcn|betterzip)\.(com|net)\/ url 302 https://macitbetter.com/
+^(http|https):\/\/(www.)?beyondcompare\.cc\/ url 302 https://www.scootersoftware.com/
+^(http|https):\/\/(www.)?bingdianhuanyuan\.cn\/ url 302 https://www.faronics.com/zh-hans/products/deep-freeze
+^(http|https):\/\/(www.)?chemdraw\.com\.cn\/ url 302 https://www.perkinelmer.com.cn/
+^(http|https):\/\/(www.)?codesoftchina\.com\/ url 302 https://www.teklynx.com/
+^(http|https):\/\/(www.)?coreldrawchina\.com\/ url 302 https://www.coreldraw.com/cn/
+^(http|https):\/\/(www.)?crossoverchina\.com\/ url 302 https://www.codeweavers.com/
+^(http|https):\/\/(www.)?dongmansoft\.com\/ url 302 https://www.udongman.cn/
+^(http|https):\/\/(www.)?earmasterchina\.cn\/ url 302 https://www.earmaster.com/
+^(http|https):\/\/(www.)?easyrecoverychina\.com\/ url 302 https://www.ontrack.com/
+^(http|https):\/\/(www.)?ediuschina\.com\/ url 302 https://www.grassvalley.com/
+^(http|https):\/\/(www.)?flstudiochina\.com\/ url 302 https://www.image-line.com/
+^(http|https):\/\/(www.)?formysql\.com\/ url 302 https://www.navicat.com.cn/
+^(http|https):\/\/(www.)?guitarpro\.cc\/ url 302 https://www.guitar-pro.com/
+^(http|https):\/\/(www.)?huishenghuiying\.com\.cn\/ url 302 https://www.coreldraw.com/cn/
+^(http|https):\/\/hypersnap\.mairuan\.com\/ url 302 https://www.hyperionics.com/
+^(http|https):\/\/(www.)?iconworkshop\.cn\/ url 302 https://www.axialis.com/
+^(http|https):\/\/(www.)?idmchina\.net\/ url 302 https://www.internetdownloadmanager.com/
+^(http|https):\/\/(www.)?imindmap\.cc\/ url 302 https://www.ayoa.com/previously-imindmap/
+^(http|https):\/\/(www.)?jihehuaban\.com\.cn\/ url 302 https://www.chartwellyorke.com/sketchpad/x24795.html
+^(http|https):\/\/hypersnap\.mairuan\.com\/ url 302 https://www.keyshot.com/
+^(http|https):\/\/(www.)?kingdeecn\.cn\/ url 302 http://www.kingdee.com/
+^(http|https):\/\/(www.)?logoshejishi\.com url 302 https://www.sothink.com/product/logo-design-software/
+^(http|https):\/\/logoshejishi\.mairuan\.com\/ url 302 https://www.sothink.com/product/logo-design-software/
+^(http|https):\/\/(www.)?luping\.net\.cn\/ url 302 https://www.techsmith.com/
+^(http|https):\/\/(www.)?mathtype\.cn\/ url 302 https://www.dessci.com/
+^(http|https):\/\/(www.)?mindmanager\.(cc|cn)\/ url 302 https://www.mindjet.com/cn/
+^(http|https):\/\/(www.)?mindmapper\.cc\/ url 302 https://www.mindmapper.com/
+^(http|https):\/\/(www.)?(mycleanmymac|xitongqingli)\.com\/ url 302 https://macpaw.com/
+^(http|https):\/\/(www.)?nicelabel\.cc\/ url 302 https://www.nicelabel.com/zh/
+^(http|https):\/\/(www.)?ntfsformac\.cc\/ url 302 https://www.tuxera.com/products/tuxera-ntfs-for-mac-cn/
+^(http|https):\/\/(www.)?ntfsformac\.cn\/ url 302 https://china.paragon-software.com/home-mac/ntfs-for-mac/
+^(http|https):\/\/(www.)?overturechina\.com\/ url 302 https://sonicscores.com/
+^(http|https):\/\/(www.)?passwordrecovery\.cn\/ url 302 https://cn.elcomsoft.com/aopr.html
+^(http|https):\/\/(www.)?pdfexpert\.cc\/ url 302 https://pdfexpert.com/zh
+^(http|https):\/\/(www.)?photozoomchina\.com\/ url 302 https://www.benvista.com/
+^(http|https):\/\/(www.)?shankejingling\.com\/ url 302 https://www.sothink.com/product/flashdecompiler/
+^(http|https):\/\/cn\.ultraiso\.net\/ url 302 https://cn.ezbsystems.com/ultraiso/
+^(http|https):\/\/(www.)?vegaschina\.cn\/ url 302 https://www.vegascreativesoftware.com/
+^(http|https):\/\/(www.)?xshellcn\.com\/ url 302 https://www.netsarang.com/zh/xshell/
+^(http|https):\/\/(www.)?yuanchengxiezuo\.com\/ url 302 https://www.teamviewer.com/
+^(http|https):\/\/(www.)?zbrushcn.com/ url 302 https://pixologic.com/
 
 # AbeamTV
-^https?:\/\/api\.abema\.io\/v\d\/ip\/check url reject-200
+^(http|https):\/\/api\.abema\.io\/v\d\/ip\/check url reject-200
 
 # Wikiwand
 ^https://zh.(m.)?wikipedia.org/zh(-\w*)?(?=/) url 302 https://www.wikiwand.com/zh$2
@@ -576,14 +577,13 @@ hostname = -lark-frontier-hl.snssdk.com,api.weibo.cn,mapi.weibo.com,www.zhihu.co
 ^https?:\/\/\w+\.jstucdn\.com\/(g3\/|js\/ad) url reject
 
 # Z
-# > Zhihu - api.zhihu.com
-# ^https?:\/\/api\.zhihu\.com\/commercial_api\/ url reject
-# ^https?:\/\/api\.zhihu\.com\/fringe\/ad url reject
-# ^https?:\/\/api\.zhihu\.com\/ad url reject
-# ^https?:\/\/api\.zhihu\.com\/appview\/api\/v\d\/answers\/\d+\/recommendations url reject
-# ^https?:\/\/api\.zhihu\.com\/\w+\/\d+\/comments\/featured-comment-ad url reject
-^https?:\/\/api\.zhihu\.com\/(notifications\/v3\/count|v3\/package|me\/guides|drama\/living-info|ad|fringe|commercial|market\/popovers|search\/(top|tab)|.*featured-comment-ad|appview\/api\/v\d\/answers\/\d+\/recommendations) url reject
-^https?:\/\/www\.zhihu\.com\/appview\/(p|v2\/answer|zvideo)\/.*entry=(preload-topstory|preload-search|preload-subscription) url reject
+# > Zhihu - www.zhihu.com,api.zhihu.com
+^https?:\/\/api\.zhihu\.com\/commercial_api\/ url reject
+^https?:\/\/api\.zhihu\.com\/fringe\/ad url reject
+^https?:\/\/api\.zhihu\.com\/ad url reject
+^https?:\/\/api\.zhihu\.com\/appview\/api\/v\d\/answers\/\d+\/recommendations url reject
+^https?:\/\/api\.zhihu\.com\/\w+\/\d+\/comments\/featured-comment-ad url reject
+^https?:\/\/www\.zhihu\.com\/api\/v\d\/answers/\d+/recommendations url reject
 # > zhibo8 - a.qiumibao.com
 ^https?:\/\/a\.qiumibao\.com\/activities\/config\.php url reject
 ^https?:\/\/((25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\.){3}(25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d):\d+\/allOne\.php\?ad_name url reject
