--- a/Rewrite/QuantumultX_Profiles.conf
+++ b/Rewrite/QuantumultX_Profiles.conf
@@ -253,6 +253,9 @@ final, 🕹 终极清单
 
 
 
+
+
+
 # DivineEngine Quantumult 配置示例
 #
 # 以 ";" 或 "#" 或 "//" 开头的行为注释行。
@@ -280,6 +283,7 @@ dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.
 
 # Quantumult 将不会处理到 excluded_routes 的流量。修改后最好重新启动您的设备。
 ;excluded_routes=192.168.0.0/16, 172.16.0.0/12, 100.64.0.0/10, 10.0.0.0/8
+excluded_routes=239.255.255.250/32
 
 # 在网络环境切换时出发运行模式变更
 # filter - 规则分流，all_proxy - 全部代理，all_direct - 全部直连
@@ -333,17 +337,24 @@ address=/mtalk.google.com/108.177.125.188
 # 需要策略图标的在策略后加上：img-url=http://example.com/icon.png
 #
 
-# 静态策略(static) - 手动选择
+# 类型：静态(static)
 # 指向您手动选择的候选服务器。
 ;static=policy-name-1, Sample-A, Sample-B, Sample-C, img-url=http://example.com/icon.png
 
-# 健康策略(available) - 自动选择
-# 指向候选服务器的第一个可用服务器(当策略被触发且策略结果不可用时，将立即启动并发 url 延迟测试。如果当时没有网络请求接受策略，这意味着策略处于空闲状态，即使服务器关闭，测试也不会启动。那时，您可以通过手动启动测试来更新服务器状态，但是这没有任何意义)。
+# 类型：可用(available)
+# 指向候选服务器的第一个可用服务器(当策略被触发且策略结果不可用时，将立即启动并发 url 延迟测试。
+# 如果当时没有网络请求接受策略，这意味着策略处于空闲状态，即使服务器关闭，测试也不会启动。那时，您可以通过手动启动测试来更新服务器状态，但是这没有任何意义)。
 ;available=policy-name-2, Sample-A, Sample-B, Sample-C
 
-# 负载均衡(round-robin) - 轮询调度
+# 类型：负载均衡(round-robin)
 # 指向在候选服务器中指向下一个服务器以进行下一次连接。
 ;round-robin=policy-name-3, Sample-A, Sample-B, Sample-C
+
+# 类型：延迟测试(url-latency-benchmark)
+# 策略指向具有最佳 URL 延迟(公差，单位毫秒)结果的服务器。
+# 当用户在 Quantumult X 中手动启动 URL 测试时，策略结果也会被更新。
+# 该类型的策略有一个名为 check-interval(秒) 的参数，如果此策略已经被任何请求激活，则将考虑该间隔。
+;url-latency-benchmark=policy-name-8, resource-tag-regex=^sample, server-tag-regex=^example, check-interval=600, tolerance=0
 
 # SSID
 # 策略根据网络环境的不同指向服务器。
@@ -489,4 +500,3 @@ skip_validating_cert = true
 ;force_sni_domain_name = false
 ;simple_cert_hostname = non-existed-domain.com, *.non-connected-domain.com
 ;hostname = *.googlevideo.com
-
