--- a/Rewrite/TikTokKR.conf
+++ b/Rewrite/TikTokKR.conf
@@ -6,3 +6,5 @@ hostname = *.tiktokv.com, *.byteoversea.com, *.musical.ly, *.snssdk.com
 (?<=_region=)CN(?=&) url 307 KR
 (?<=&app_version=)1[6-9]..(?=.?.?&) url 307 17..
 (?<=\?version_code=)1[6-9]..(?=.?.?&) url 307 17..
+
+# 区域解锁不可多个地区同时使用版本号<17.9.0
