--- a/Rewrite/Advertising.conf
+++ b/Rewrite/Advertising.conf
@@ -20,7 +20,7 @@ hostname = -lark-frontier-hl.snssdk.com,api.21jingji.com,service.4gtv.tv,app.58.
 ^https?:\/\/\w+\.58cdn\.com\.cn\/brandads\/ url reject
 
 # A
-# --- (Alibaba) ---
+# (Alibaba) 
 # > Taobao - gw.alicdn.com,heic.alicdn.com
 ^https?:\/\/(gw|heic)\.alicdn\.com\/\w{2}s\/.+\.jpg_(9\d{2}|\d{4}) url reject
 ^https?:\/\/(gw|heic)\.alicdn\.com\/imgextra\/.+\d{4}-\d{4}\.jpg_9\d{2} url reject
@@ -53,7 +53,7 @@ hostname = -lark-frontier-hl.snssdk.com,api.21jingji.com,service.4gtv.tv,app.58.
 ^https?:\/\/[\w-]+\.snssdk\.com\/motor\/operation\/activity\/display\/config\/V2\/ url reject
 ^https?:\/\/((25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\.){3}(25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\/img\/ad\.union\.api\/ url reject
 ^https?:\/\/dsp\.toutiao\.com\/api\/xunfei\/ads\/ url reject
-# ---(Baidu)---
+# (Baidu)
 # > Baidu NetDisk - issuecdn.baidupcs.com
 ^https?:\/\/pan\.baidu\.com\/rest\/\d\.\d\/pcs\/adx url reject
 ^https?:\/\/pan\.baidu\.com\/act\/api\/activityentry url reject
@@ -279,7 +279,7 @@ hostname = -lark-frontier-hl.snssdk.com,api.21jingji.com,service.4gtv.tv,app.58.
 ^https?:\/\/app\.mixcapp\.com\/mixc\/api\/v\d\/ad url reject
 
 # N
-# ---(NetEase)---
+# (NetEase)
 # > NetEase MailMaster - appconf.mail.163.com
 ^https?:\/\/appconf\.mail\.163\.com\/mmad\/ url reject
 # > NetEase News - c.m.163.com
@@ -341,7 +341,7 @@ hostname = -lark-frontier-hl.snssdk.com,api.21jingji.com,service.4gtv.tv,app.58.
 ^https?:\/\/api\.rr\.tv\/ad\/ url reject
 
 # S
-# ---(Sina)---
+# (Sina)
 # > Weibo - *.uve.weibo.com,weibointl.api.weibo.cn
 # ^https?:\/\/sdkapp\.uve\.weibo\.com\/interface\/sdk\/(actionad|sdkad)\.php url reject
 # ^https?:\/\/wbapp\.uve\.weibo\.com\/wbapplua\/wbpullad\.lua url reject
@@ -384,7 +384,7 @@ hostname = -lark-frontier-hl.snssdk.com,api.21jingji.com,service.4gtv.tv,app.58.
 ^https?:\/\/snailsleep\.net\/snail\/v\d\/adTask\/ url reject
 
 # T
-# ---(Tencent)---
+# (Tencent)
 # > FUTU - api*.futunn.com
 ^https?:\/\/api\.futunn\.com\/v\d\/ad\/ url reject
 ^https?:\/\/api\d\.futunn\.com\/ad\/ url reject
