--- a/Rewrite/General.conf
+++ b/Rewrite/General.conf
@@ -1,4 +1,4 @@
-hostname = www.google.cn,api.abema.io
+hostname = www.google.cn,api.abema.io,*.wikipedia.org,*.wikiwand.com
 
 # Redirect Google Search Service
 ^(http|https):\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
@@ -68,3 +68,7 @@ hostname = www.google.cn,api.abema.io
 
 # AbeamTV
 ^(http|https):\/\/api\.abema\.io\/v\d\/ip\/check url reject-200
+
+# Wikiwand
+^https://zh.(m.)?wikipedia.org/zh(-\w*)?(?=/) url 302 https://www.wikiwand.com/zh$2
+^https://(\w*).(m.)?wikipedia.org/wiki url 302 https://www.wikiwand.com/$1
