--- a/Rewrite/Rewrite_TikTokKR.conf
+++ b/Rewrite/Rewrite_TikTokKR.conf
@@ -7,4 +7,4 @@ hostname = *.tiktokv.com, *.byteoversea.com, *.musical.ly, *.snssdk.com
 (?<=&app_version=)1[6-9]..(?=.?.?&) url 307 17..
 (?<=\?version_code=)1[6-9]..(?=.?.?&) url 307 17..
 
-# 区域解锁不可多个地区同时使用版本号<17.9.0
+# 区域解锁不可多个地区同时使用.版本号<17.9.0
