--- a/Scripts/TestFlightDownload.conf
+++ b/Scripts/TestFlightDownload.conf
@@ -1,4 +1,4 @@
-# 该订阅仅适用于QuantumultX, 用于更新TestFlight App时, 提示"APP不可用"问题. 解除区域限制.
+# 该订阅仅适用于QuantumultX用于更新TestFlight App时提示"APP不可用"问题. 解除区域限制.
 
 hostname = testflight.apple.com
 
