--- a/Rewrite/Advertising.conf
+++ b/Rewrite/Advertising.conf
@@ -153,6 +153,7 @@ hostname = -lark-frontier-hl.snssdk.com,api.21jingji.com,service.4gtv.tv,app.58.
 ^https?:\/\/pic\.edaijia\.cn\/adsplash\/ url reject
 # > eleme - cube.elemecdn.com
 ^https?:\/\/cube\.elemecdn\.com\/[\w\/]+\.jpeg\?x-oss-process=image\/resize,m_fill,w_\d{3},h_\d{4}\/format,webp\/ url reject
+^https?:\/\/cube\.elemecdn\.com\/[\w\/]+\.jpeg\?x-oss-process=image\/resize,m_fill,w_1\d{3},h_2\d{3}\/format,webp\/ url reject
 ^https?:\/\/cube\.elemecdn\.com\/[\w\/]+\.jpeg\?x-oss-process=image\/resize,m_fill,w_6\d{2},h_8\d{2}\/format,webp\/ url reject
 ^https?:\/\/cube\.elemecdn\.com\/\w\/\w{2}\/\w+mp4\.mp4\? url reject
 # > ezviz ViedoGo - i.ys7.com
@@ -191,6 +192,8 @@ hostname = -lark-frontier-hl.snssdk.com,api.21jingji.com,service.4gtv.tv,app.58.
 ^https?:\/\/api\.huomao\.com\/channels\/loginAd url reject
 # > HanjuTV
 ^https?:\/\/api\.hanju\.koudaibaobao\.com\/api\/carp\/kp\? url reject
+# > Huya - business.msstatic.com
+^https?:\/\/business\.msstatic\.com\/advertiser\/ - reject
 
 # I
 # > iFLY Input - imeclient.openspeech.cn
@@ -302,10 +305,13 @@ hostname = -lark-frontier-hl.snssdk.com,api.21jingji.com,service.4gtv.tv,app.58.
 ^https?:\/\/wap\.ngchina\.cn\/news\/adverts\/ url reject
 # > NIU - app-api.niu.com
 ^https?:\/\/app-api\.niu\.com\/v\d\/advertisement\/ url reject
+# > Naver TV - gfp.veta.naver.com
+^https?:\/\/gfp\.veta\.naver\.com\/adcall\? url reject
 
 # O
 # > Oray - slapi.oray.net
 ^https?:\/\/slapi\.oray\.net\/client\/ad url reject
+^https?:\/\/slapi\.oray\.net\/adver url reject
 
 # P
 # > PiaoGen - pss.txffp.com
@@ -322,9 +328,6 @@ hostname = -lark-frontier-hl.snssdk.com,api.21jingji.com,service.4gtv.tv,app.58.
 ^https?:\/\/mrobot\.pcauto\.com\.cn\/xsp\/s\/auto\/info\/preload\.xsp url reject
 
 # Q
-# > Qdaily
-^https?:\/\/app\d\.qdaily\.com\/app\d\/boot_advertisements\.json url reject
-^https?:\/\/notch\.qdaily\.com\/api\/v\d\/boot_ad url reject
 # > QYER - open.qyer.com,media.qyer.com
 ^https?:\/\/open\.qyer\.com\/qyer\/startpage\/ url reject
 ^https?:\/\/open\.qyer\.com\/qyer\/config\/get url reject
