--- a/Rewrite/QuantumultX_Profiles.conf
+++ b/Rewrite/QuantumultX_Profiles.conf
@@ -283,7 +283,8 @@ dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.
 
 # Quantumult 将不会处理到 excluded_routes 的流量。修改后最好重新启动您的设备。
 ;excluded_routes=192.168.0.0/16, 172.16.0.0/12, 100.64.0.0/10, 10.0.0.0/8
-excluded_routes=239.255.255.250/32
+# Hearthstone: 24.105.30.129/32, 185.60.112.157/32, 185.60.112.158/32, 182.162.132.1/32
+excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.112.158/32, 182.162.132.1/32
 
 # 在网络环境切换时出发运行模式变更
 # filter - 规则分流，all_proxy - 全部代理，all_direct - 全部直连
@@ -483,9 +484,6 @@ final, Final
 # 部署后您应该通过 http://127.0.0.1:9999/your-path/your-api/. 进行访问。服务器默认监听端口为 9999，您可以在UI中进行更改。
 #
 # [http_backend] 完整示例请查看「示例」
-
-# BoxJs
-https://gitee.com/chavyleung/scripts/raw/master/box/chavy.boxjs.js, tag=BoxJs.net, path=^/, enabled=false
 
 [mitm]
 #
