--- a/Rewrite/QuantumultX_Profiles.conf
+++ b/Rewrite/QuantumultX_Profiles.conf
@@ -256,6 +256,8 @@ final, 终极清单
 
 
 
+
+
 # DivineEngine Quantumult 配置示例
 #
 # 以 ";" 或 "#" 或 "//" 开头的行为注释行。
@@ -267,7 +269,7 @@ final, 终极清单
 ;profile_img_url=http://www.example.com/example.png
 
 # resource_parser_url 示例可以在以下网站找到 https://raw.githubusercontent.com/crossutility/Quantumult-X/master/resource-parser.js
-resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
+resource_parser_url=https://cdn.jsdelivr.net/gh/KOP-XIAO/QuantumultX@master/Scripts/resource-parser.js
 
 ;geo_location_checker=http://www.example.com/json/, https://www.example.com/script.js
 
