--- a/Rewrite/AdvertisingPlus.conf
+++ b/Rewrite/AdvertisingPlus.conf
@@ -25,7 +25,7 @@ hostname = *.amemv.com,api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,www.zhihu.com
 # 知乎热榜去广告
 ^https?:\/\/api\.zhihu\.com\/topstory\/hot-lists?(\?|\/) url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
 # 知乎评论去广告
-^https?:\/\/api\.zhihu\.com\/comment_v5\/answers\/\d+\/root_comment url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
+^https?:\/\/api\.zhihu\.com\/(comment_v5\/)?(answers|comments?|articles|pins)\/\d+\/(root_|child_)?comments? url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
 
 # > SMZDM - homepage-api.smzdm.com,haojia-api.smzdm.com,article-api.smzdm.com
 ^https?:\/\/homepage-api\.smzdm\.com\/home url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smzdm/smzdm_remove_ads.js
@@ -36,5 +36,4 @@ hostname = *.amemv.com,api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,www.zhihu.com
 
 # (By srk24)
 # > bilibili
-#^https?:\/\/app\.bilibili\.com\/x\/v2\/splash\/list url script-response-body https://raw.githubusercontent.com/srk24/profile/master/bilibili_splash.js
-
+^https?:\/\/app\.bilibili\.com\/x\/v\d\/splash\/list url script-response-body https://raw.githubusercontent.com/srk24/profile/master/js/bilibili_splash.js
