--- a/Scripts/Orz-3_JS.conf
+++ b/Scripts/Orz-3_JS.conf
@@ -1,6 +1,6 @@
 hostname = mp.weixin.qq.com, api.bilibili.com, app.bilibili.com, trade-acs.m.taobao.com, api.m.jd.com, ios.prod.ftl.netflix.com, *.amemv.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, www.zhihu.com, api.zhihu.com, homepage-api.smzdm.com, haojia-api.smzdm.com, article-api.smzdm.com, haojia.m.smzdm.com, app-api.smzdm.com, s-api.smzdm.com, testflight.apple.com
 
-# 抖音去广告 (By Choler)a
+# 抖音去广告 (By Choler)
 ^https?:\/\/.*\.amemv\.com\/aweme\/v2\/(follow\/)?feed\/ url request-header ^GET \/aweme\/v\d\/(follow\/)?feed\/(.+\r\n) request-header GET /aweme/v1/$1feed/$2
 ^https?:\/\/.*\.amemv\.com\/aweme\/v\d\/(feed|mix\/aweme|aweme\/post|(multi\/)?aweme\/detail|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-response-body https://raw.githubusercontent.com/Choler/Surge/master/Script/douyin.js
 
