--- a/Rewrite/sample.conf
+++ b/Rewrite/sample.conf
@@ -1,7 +1,7 @@
 # Sample Quantumult Configuration (v1.0.19)
 #
 # Line started with ";" or "#" or "//" shall be comments.
-# 以 ";" 或 "#" 或 "//" 开头的行为注释行。
+# 以 ";" 或 "#" 或 "//" 开头的行为注释行
 #
 # SS-URI scheme can be found at https://shadowsocks.org/en/spec/SIP002-URI-Scheme.html
 #
