--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, api.bilibili.com, app.bilibili.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, aweme*.snssdk.com, *.kuwo.cn, vsco.co, *.amemv.com, account.wps.cn, account.wps.com, biz.caiyunapp.com, ap*.intsig.net, api.vuevideo.net, api.picsart.c*, api.meiease.c*, trade-acs.m.taobao.com, api.m.jd.com, ios.prod.ftl.netflix.com, api.rr.tv, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, license.pdfexpert.com, testflight.apple.com
+hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, api.bilibili.com, app.bilibili.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, aweme*.snssdk.com, *.kuwo.cn, vsco.co, *.amemv.com, account.wps.cn, account.wps.com, biz.caiyunapp.com, ap*.intsig.net, api.vuevideo.net, api.picsart.c*, api.meiease.c*, trade-acs.m.taobao.com, api.m.jd.com, ios-h2.prod.ftl.netflix.com, api.rr.tv, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, license.pdfexpert.com, testflight.apple.com
 
 
 # Webo (By yichahucha)
@@ -61,7 +61,10 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key 
 # WPS (By eHpo)
 ^https://account.wps.cn/api/users/ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/Wps.js
 
-# ColorWeather VIP
+# 水印精灵 VIP (By Alex0510)
+^https:\/\/api1\.dobenge\.cn\/api\/user\/getuserinfo url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/syjl.js
+
+# 彩云天气 VIP
 ^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/ColorWeather.js
 
 # CamScanner pro
@@ -83,11 +86,12 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key 
 ^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/passat/QuanX/main/File/tb_price.js
 ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/tb_price.js
 
-# Netflix评分
-^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-request-header https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
-^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
-# 单集评分
-^https?://ios\.prod\.ftl\.netflix\.com/iosui/warmer/.+type=show-ath url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating_season.js
+# Netflix评分 (By yichahucha)
+^https?://ios-h2\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-request-header https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
+^https?://ios-h2\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
+
+# 单集评分 (By yichahucha)
+^https?://ios-h2\.prod\.ftl\.netflix\.com/iosui/warmer/.+type=show-ath url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating_season.js
 
 # YouTube去广告
 ^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-img
