--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -79,7 +79,7 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key 
 # RRTV (By george Jiang & R)
 ^https:\/\/api\.rr\.tv(\/user\/privilege\/list|\/ad\/getAll|\/rrtv-video\/v4plus\/season\/detail) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/rrtv.js
 
-# JD比价 (By yichahucha)
+# JD比价
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/jd_price.js
 
 # TaoBao比价 (By yichahucha)
