--- a/Rewrite/General.conf
+++ b/Rewrite/General.conf
@@ -1,4 +1,4 @@
-hostname = www.google.cn,api.abema.io,*.wikipedia.org,*.wikiwand.com, app.biliintl.com
+hostname = www.google.cn,api.abema.io, app.biliintl.com, *.wikipedia.org,*.wikiwand.com
 
 # Redirect Google Search Service
 ^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
@@ -71,7 +71,7 @@ hostname = www.google.cn,api.abema.io,*.wikipedia.org,*.wikiwand.com, app.biliin
 ^https://(\w*).(m.)?wikipedia.org/wiki url 302 https://www.wikiwand.com/$1
 
 # bilibili Intl
-(^https?:\/\/app\.biliintl\.com\/intl\/.+)(&s_locale=zh-Hans_[A-Z]{2})(.+) url 302 $1&s_locale=en-US_US$3
+#(^https?:\/\/app\.biliintl\.com\/intl\/.+)(&s_locale=zh-Hans_[A-Z]{2})(.+) url 302 $1&s_locale=en-US_US$3
 (^https?:\/\/app\.biliintl\.com\/intl\/.+)(&sim_code=\d+)(.+) url 302 $1$3
 
 # AICoin
