--- a/Rewrite/AdvertisingPlus.conf
+++ b/Rewrite/AdvertisingPlus.conf
@@ -1,7 +1,7 @@
-hostname = *.amemv.com,api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,www.zhihu.com,api.zhihu.com,homepage-api.smzdm.com,haojia-api.smzdm.com,article-api.smzdm.com,haojia.m.smzdm.com,app-api.smzdm.com,s-api.smzdm.com,app.bilibili.com
+hostname = api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,www.zhihu.com,api.zhihu.com,homepage-api.smzdm.com,haojia-api.smzdm.com,article-api.smzdm.com,haojia.m.smzdm.com,app-api.smzdm.com,s-api.smzdm.com,app.bilibili.com,*.amemv.com
 
 # (By Choler)
-# > Douyin(<= 16.2.0) - api?-*-*-*.amemv.com
+# > Douyin(<= 16.2.0) 
 ^https?:\/\/api.*\.amemv\.com\/aweme\/v\d\/(?!(comment|namek)) url request-header ^GET \/aweme\/v\d\/(.+\r\n) request-header GET /aweme/v1/$1
 ^https?:\/\/api.*\.amemv\.com\/aweme\/v[12]\/((|follow\/|nearby\/)feed|aweme\/post|hot\/search\/video\/list|mix\/aweme|aweme\/detail)\/\? url script-response-body https://raw.githubusercontent.com/Choler/Surge/master/Script/douyin.js
 
