--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, api.bilibili.com, app.bilibili.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, aweme*.snssdk.com, *.kuwo.cn, vsco.co, *.amemv.com, account.wps.cn, account.wps.com, biz.caiyunapp.com, ap*.intsig.net, api.vuevideo.net, api.picsart.c*, api.meiease.c*, ios-*.prod.ftl.netflix.com, ios.prod.ftl.netflix.com, api.rr.tv, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, license.pdfexpert.com, api.revenuecat.com, education.github.com, testflight.apple.com
+hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, api.bilibili.com, app.bilibili.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, aweme*.snssdk.com, *.kuwo.cn, vsco.co, *.amemv.com, account.wps.cn, account.wps.com, biz.caiyunapp.com, ap*.intsig.net, api.vuevideo.net, api.picsart.c*, api.meiease.c*, ios-*.prod.ftl.netflix.com, ios.prod.ftl.netflix.com, api.rr.tv, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, license.pdfexpert.com, api.revenuecat.com, education.github.com
 
 
 # 微博 (By yichahucha)
@@ -98,5 +98,4 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom\?access_key 
 ^https?:\/\/.+\.youtube\.com\/pagead\/ url reject-img
 ^https?:\/\/.+\.youtube\.com\/ptracking url reject-img
 
-# TestFlight (By NobyDa)
-# ^https?:\/\/testflight\.apple\.com\/v\d\/accounts\/.+?\/install$ url script-request-body https://gist.githubusercontent.com/NobyDa/9be418b93afc5e9c8a8f4d28ae403cf2/raw/TF_Download.js
+
