--- a/Rewrite/General.conf
+++ b/Rewrite/General.conf
@@ -90,4 +90,4 @@ hostname = www.google.cn,www.firefox.com.cn,api.abema.io, app.biliintl.com,passp
 (^https?:\/\/app\.biliintl\.com\/intl\/.+)(&sim_code=\d+)(.+) url 302 $1$3
 
 # AICoin
-^http:\/\/(www.)?aicoin\.cn\/$ url 302 https://www.aicoin.cn/?long_lives_aicoin=%22live%22
+^http:\/\/(www.)?aicoin\.cn\/$ url 302 https://www.aicoin.com/
